# Cinnabar

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
doc/: design.md  exprs.md  generic_syntax.md  grammar.md  mem_life_gc.md  overloading.md  types.md  types_syntax.md  visibility.md
include/: ast.hpp  ast_ops.hpp  codegen.hpp  codegen_c.hpp  common.hpp  lexer.hpp  parser.hpp  tast.hpp  type_resolver.hpp  typecheck_resolver.hpp
include/argparse/: argparse.hpp
src/: ast.cpp  ast.hpp  ast_ops.cpp  ast_ops.hpp  codegen.cpp  codegen_c.cpp  codegen_c.hpp  cpp2parser._cpp  lexer.cpp  main.cpp  parser.cpp  parser.hpp  tast.cpp  tast.hpp  type_resolver.cpp  type_resolver.hpp  typecheck_resolver.cpp
src/memory/: memory.cpp  rc_string.cpp  rc_string.hpp  value_ptr.hpp
test/: ackermann.cb  const_generic.cb  dotref.cb  example.cb  expr_precedence.cb  fib.cb  funcall.cb  hello_world.cb  index.cb  literals.cb  mandelbrot.cb  name_resolution.cb  out.c  postfix  print.cb  ref.cb  scan.cb  test.cb  test_if.cb
test/enum/: empty.cb  enumerate.cb  option.cb  variant.cb
test/errors/: recursive_type.cb  var.cb
test/generic/: function.cb
test/struct/: empty.cb  fields.cb  function_scope.cb  methods.cb
